apps/holvi-proxy/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: holvi
  namespace: holvi
subsets:
  - addresses:
      - ip: 192.168.1.117
    ports:
      - port: 7277
