apps/holvi-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: holvi
  namespace: holvi
spec:
  clusterIP: None
  ports:
    - port: 7277
      targetPort: 7277
      protocol: TCP
