apps/holvi-proxy/ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: holvi-ingress-internal
  namespace: holvi
  annotations:
    cert-manager.io/cluster-issuer: "internal-ca"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - secretName: holvi-internal-tls
      hosts:
        - holvi.internal
  rules:
    - host: holvi.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: holvi
                port:
                  number: 7277
